--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
 </head>
 </head>
 <body>
-	<script src="index.js" type="module"></script>
+<script src="index.js" type="module"></script>
+<div>
+	<p>
+		<ul>
+			<li>
+				Right key = walk
+			</li>
+			<li>
+				Space = jump
+			</li>
+			<li>
+				Down key = slide
+			</li>
+			<li>
+				"D" = death animation(press "R" to reset)
+			</li>
+		</ul>
+	</p>
+</div>
 </body>
 </html>
