--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		background-color:rgb(245, 129, 29);
 		overflow:hidden;
 	}
+
 </style>
 </head>
 </head>
@@ -18,8 +19,9 @@
 <div>
 	<p>
 		<ul>
+	<h3>Instructions</h3>
 			<li>
-				Right key = walk
+				Right key = walk(hold left "shift" to run)
 			</li>
 			<li>
 				Space = jump
